Dev fix: Dark mode "now" wasn't right
DD-2659

--- a/css/dataTables.dateTime.scss
+++ b/css/dataTables.dateTime.scss
@@ -308,7 +308,7 @@ html.dark {
 				}
 	
 				&.now {
-					background-color: #ddd;
+					background: rgb(75, 80, 85);
 				}
 	
 				&.selected button {
